Este es mi primer archivo modificado

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 		Practica
 	</Title>
 </head>
+<style>
+	#color1 {color:green;}
+	#color2 {color:red;}
+</style>
 <body>
-		<h1>El título principal
-		de mi sitio</h1>
+		<h1 id="color1">El título principal de mi sitio</h1>
+		<b>Pablo Gomez.</b>
+		<p><strong id="color2">Puedes cambiar este texto si quieres.</strong></p>
 </body>
-</html>
+<red
