Este es el Archivo de la Guia: Practica 2 / Modificado

--- a/Practica2.html
+++ b/Practica2.html
@@ -23,6 +23,10 @@
 		<h6>Encabezado H6</h6>
 		<p>El objetivo de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal</p>
 
-		<a href="https://www.ugb.edu.sv/">UNIVERSIDAS GERARDO BARRIOS</a>
+		<a href="https://www.ugb.edu.sv/">UNIVERSIDAS GERARDO BARRIOS</a><p></p>>
+
+		<img src="https://www.ugb.edu.sv/images/2017/03/24/logo-ugb-horizontal.png">
+
+		<a href="https://www.ugb.edu.sv/"><img src="https://www.ugb.edu.sv/images/2017/03/24/logo-ugb-horizontal.png"></a>
 </body>
 </html>
