Este es el archivo de la Practica con las dos lineas agregadas sobre el resumen de la clase.

--- a/Practica2.html
+++ b/Practica2.html
@@ -28,5 +28,8 @@
 		<img src="https://www.ugb.edu.sv/images/2017/03/24/logo-ugb-horizontal.png">
 
 		<a href="https://www.ugb.edu.sv/"><img src="https://www.ugb.edu.sv/images/2017/03/24/logo-ugb-horizontal.png"></a>
+
+		<h1>Resumen de la Clase</h1>
+		<p>En esta clase vimos un poco de la historia del comercio electronico, innovacion, Institucionalizacion y comercializacion y como funciona a fondo. Los significados de algunos conceptos (Internet, Nube, Cliente, Servidor)  basicos y la utilizacion correcta de las URL's, URLs Limpias y URLs Sucia (Get y Post), y tambien conceptos como : HTTP, HTML, ISP, LAN, Intranet y Extranet.</p>
 </body>
 </html>
