Este es el archivo con la segunda parte del laboratorio 1 computo 1

--- a/Laboratorio_Practico1.html
+++ b/Laboratorio_Practico1.html
@@ -17,5 +17,12 @@
 	<li>Primera pelicula favorita - Terror: Insidius</li>
 	<li>Segunda Pelicula favorita - Terror: La purga</li>
 	</ol>
+	<h3>Comida preferida: Lasagna</h3>
+	<ul>
+	<li>Tipo de Lasagna 1: De pollo</li>
+	<li>Tipo de lasagna 2: De carne</li>
+	<li>Tipo de lasagna 3: Mixta de pollo con carne</li>
+	<li>Tipo de lasagna 4: Con queso y sin queso</li>
+	</ul>
 	</body>
 <html/>
