Este es el archivo con la tercera parte del laboratorio 1 computo 1

--- a/Laboratorio_Practico1.html
+++ b/Laboratorio_Practico1.html
@@ -24,5 +24,23 @@
 	<li>Tipo de lasagna 3: Mixta de pollo con carne</li>
 	<li>Tipo de lasagna 4: Con queso y sin queso</li>
 	</ul>
+	<ul>
+	<li>Nombres comunes de chicas</li>
+	<ol>
+	<li>Karla</li>
+	<li>Maria</li>
+	<li>Cristina</li>
+	<li>Carmen</li>
+	<li>Sofia</li>
+	</ol>
+	<li>Nombres comunes de chicos</li>
+	<ol>
+	<li>Jose</li>
+	<li>Pedro</li>
+	<li>Pablo</li>
+	<li>Carlos</li>
+	<li>Cristian</li>
+	</ol>
+	</ul>
 	</body>
 <html/>
