--- a/Laboratorio_Practico1.html
+++ b/Laboratorio_Practico1.html
@@ -10,6 +10,7 @@
 	<li>Segundo Artista favorito: Drake</li>
 	<li>Cancion favorita: Nopstop</li>
 	</ol>
+	
 	<h2>Categoria de pelicula: Comedia y Terror</h2>
 	<ol>
 	<li>Pelicula favorita - Comedia: Mi abuelo es un peligro.</li>
@@ -17,6 +18,7 @@
 	<li>Primera pelicula favorita - Terror: Insidius</li>
 	<li>Segunda Pelicula favorita - Terror: La purga</li>
 	</ol>
+	
 	<h3>Comida preferida: Lasagna</h3>
 	<ul>
 	<li>Tipo de Lasagna 1: De pollo</li>
@@ -25,6 +27,7 @@
 	<li>Tipo de lasagna 4: Con queso y sin queso</li>
 	</ul>
 	<ul>
+	
 	<li>Nombres comunes de chicas</li>
 	<ol>
 	<li>Karla</li>
@@ -33,6 +36,7 @@
 	<li>Carmen</li>
 	<li>Sofia</li>
 	</ol>
+	
 	<li>Nombres comunes de chicos</li>
 	<ol>
 	<li>Jose</li>
@@ -42,5 +46,8 @@
 	<li>Cristian</li>
 	</ol>
 	</ul>
+	<p style = "font-size: 10px">Este es el primer parrafor con tamalo 10PX</p>
+	<p style = "font-size: 20px">Este es el segundo parrafor con tamalo 20PX</p>
+	<p style = "font-size: 40px">Este es el tercer parrafor con tamalo 40PX</p>
 	</body>
 <html/>
