Este es el archivo con la parte final del laboratorio 1 computo 1

--- a/Laboratorio_Practico1.html
+++ b/Laboratorio_Practico1.html
@@ -46,9 +46,18 @@
 	<li>Cristian</li>
 	</ol>
 	</ul>
+	<br></br>
 	
-	<p style = "font-size: 10px">Este es el primer parrafor con tamalo 10PX</p>
-	<p style = "font-size: 20px">Este es el segundo parrafor con tamalo 20PX</p>
-	<p style = "font-size: 40px">Este es el tercer parrafor con tamalo 40PX</p>
+	<p style = "font-size: 10px">Este es el primer parrafor con tamaño 10PX</p>
+	<p style = "font-size: 20px">Este es el segundo parrafor con tamaño 20PX</p>
+	<p style = "font-size: 40px">Este es el tercer parrafor con tamaño 40PX</p>
+	<br></br>
+	
+	<p style = "color: green; font-size: 15px">Este es el primer parrafor con colo verde y tamaño 15PX</p>
+	<p style = "color: violet; font-size: 30px">Este es el segundo parrafor con colo violeta y tamaño 30PX</p>
+	<p style = "color: red; font-size: 45px">Este es el tercer parrafor con color rojo y tamaño 45PX</p>
+	
+	<p>Pregunta estructurada por: Pablo José Gómez González<p>
+	<p style = "color: Blue; font-size: 18px">¿Cual es el significado de Cluster y cuanto podemos utilizarlo?</p>
 	</body>
 <html/>
