Este es el archivo con la parte final del laboratorio 1 computo 1

--- a/Laboratorio_Practico1.html
+++ b/Laboratorio_Practico1.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		
 		<title>Laboratorio Practico</title>
 	<head/>
 	<body>
@@ -58,6 +59,6 @@
 	<p style = "color: red; font-size: 45px">Este es el tercer parrafor con color rojo y tamaño 45PX</p>
 	
 	<p>Pregunta estructurada por: Pablo José Gómez González<p>
-	<p style = "color: Blue; font-size: 18px">¿Cual es el significado de Cluster y cuanto podemos utilizarlo?</p>
+	<p style = "color: Blue; font-size: 18px">¿Cual es el significado de Cluster y cuando podemos utilizarlo?</p>
 	</body>
 <html/>
