Este es el primer avance del Parcial 1

--- a/Parcial1/Parcial-1.html
+++ b/Parcial1/Parcial-1.html
@@ -1,13 +1,128 @@
 <html>
 	<head>
 		<title>Parcial 1</title>
-		
 		<link type="text/css" rel="css-Parcial-1" href="css-Parcial-1.css"/>
 	</head>
 
 	<body>
-		<p align="center">Este es un parrafo en mi archivo del Parcial #1</p>
+		<p align="center">Curriculum Vitea</p>
 
-		<a href="https://classroom.google.com/c/MTg2NzA4MTc5MzBa/a/MTg3MjU0MDM4MTla/details" target="_blank"><img src="https://slideplayer.es/slide/5519478/17/images/1/PARCIAL+1.jpg" width="30%" height="50%" align="center"></a>
+		<table border="2" width="1500" align="center">
+				<tr >
+					<td rowspan="10" width="150" height="150" align="center">
+						<img class="Perfil1" src="perfil.jpg" width="50%" height="115%">
+
+						<br></br>
+
+						<br></br>
+
+						<p align="center">Datos Personales</p>
+						<ul>
+							<li><span>Edad:</span> 19 Años</li>
+							<li><span>Lugar y Fecha de Nacimiento:</span> San Miguel, 08 de Mayo de 1999</li>
+							<li><span>Estado Civil:</span> Soltero</li>
+							<li><span>Direccion:</span> Calle Principal Colonia Santa Cecilia Chinameca</li>
+							<li><span>Telefono:</span> 77822891</li>
+							<li><span>Correo:</span> pablojgomezg@gmail.com</li>
+							<li><span>DUI:</span> 02034919-2</li>
+							<li><span>NIT:</span> 1933773627-2</li>
+						</ul>
+
+						<br></br>
+
+						<br></br>
+
+						<p align="center">Habilidades</p>
+						<ol>
+							<li>Fotoshop</li>
+							<li>Ilustrator</li>
+							<li>Desarrollo de Sitios Web</li>
+							<li>Programador</li>
+						</ol>
+
+						<br></br>
+
+						<br></br>
+
+						<p align="center">Cualidades</p>
+						<ol>
+							<li>Responsable</li>
+							<li>Puntual</li>
+							<li>Ambicioso</li>
+							<li>Resistente al estres</li>
+						</ol>
+
+						<br></br>
+
+						<br></br>
+
+						<p align="center">Hobbies</p>
+						<ul>
+							<li>Internet</li>
+							<li>Escribir</li>
+							<li>Leer</li>
+							<li>Viajes</li>
+						</ul>
+					</td>
+
+					<td width="300" height="300" align="center">Pablo José Gómez González<br>Tecnico en Ingenieria en Sistemas y Redes</br></td>
+				</tr>
+
+				<tr>
+					<td width="300" height="300" align="center">Estudios Realizados <br></br>
+					<p>Educacion Media:</p>
+					<p> Institucion: <span> Centro Escolar Julian Aparicio - Chinameca </span></p>
+					<p>Año: </span> 2004 - 2014 </span></p>
+					<img src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.0-1/p200x200/22814502_1251643811606694_5051120209578682756_n.jpg?_nc_cat=0&oh=19c97e8831f6d68e8e8ad52df6298bdb&oe=5BF8498F">
+					
+					<p>Educacion Basica:</p>
+					<p><br>Institucion: <span> Instituto Nacional de Chinameca </span></p>
+					<p>Año: <span> 2015 - 2016 </span></p>
+					<img src="http://sitiosescolares.miportal.edu.sv/12837/images/logo%20inch.jpg">
+					
+					<p>Educacion Superior:</p>
+					 <p> <span> Institucion: Tecnico en Ingenieria en Sistemas y Redes Informaticas </span></p>
+					 <p> <span> Año: 2017 - 2018 </span></p>
+					<img src="https://www.ugb.edu.sv/images/2017/03/24/logo-ugb-horizontal.png" align="center">
+					</td>
+				</tr>
+
+				<tr>
+					<td width="300" height="300" align="center">Experiencia <br></br>
+						<p>2014 - 2016
+						<ul>
+							<p>Inspector Tecnico en Redes</p>
+							<li>Como Inspector tenico: <span> Era el responsable de elaborar planes de inspeccion, ejecucion y evaluacion de inspeccion tecnicas para contribuir a la seguridad y mantenimiento de instalaciones.</span></li>
+						</ul>
+
+						<ul>
+							<p>Encargado de Mantenimiento de Red</p>
+							<li>Como Encargado de Mantenimiento de Red: <span> Era el responsable de mantener organizada las redes creadas de la LAN de la Empresa, para mejorar el rendimiento de las areas asignadas.</span></li>
+						</ul>
+
+						</p>
+
+						<p>2017 - 2018</p>
+					</td>
+
+					<tr width="300" height="300">
+						<td  align="center">
+							Referencias Personales
+
+							<ul align="left">
+							<li>Nombre: <span>Pablo José Gómez González</span></li>
+							<li>Telefono: <span>77288337</span></li>
+							<li>Celular fijo: <span>2669924</span></li>
+
+						</ul>
+
+						</td>
+
+
+					</tr>
+
+				</tr>
+		</table>
+
 	</body>
 </html
