--- a/Computo2/Practica 6/Practica6 .html
+++ b/Computo2/Practica 6/Practica6 .html
@@ -8,9 +8,9 @@
 <body>
 	<nav id="all-menu">
 		<ul id="menu">
-			<li><a href="http://ugb.edu.sv">Universidad Gerardo Barrios</a></li>
-			<li><a href="http://facebook.com">Facebook</a></li>
-			<li><a href="http://google.com">Google</a></li>
+			<li><a href="http://ugb.edu.sv" target="_blank">Universidad Gerardo Barrios</a></li>
+			<li><a href="http://facebook.com" target="_blank">Facebook</a></li>
+			<li><a href="http://google.com" target="_blank">Google</a></li>
 		</ul>
 	</nav>
 </body>
