Tarea de Submenus realizada.

--- a/Computo2/Practica 6/Practica6 .html
+++ b/Computo2/Practica 6/Practica6 .html
@@ -6,12 +6,33 @@
 	<link rel="stylesheet" type="text/css" href="practica6.css">
 </head>
 <body>
-	<nav id="all-menu">
-		<ul id="menu">
-			<li><a href="http://ugb.edu.sv" target="_blank">Universidad Gerardo Barrios</a></li>
-			<li><a href="http://facebook.com" target="_blank">Facebook</a></li>
-			<li><a href="http://google.com" target="_blank">Google</a></li>
-		</ul>
-	</nav>
+	<header>
+		<nav id="all-menu">
+			<ul id="menu">
+				<li><a href="http://ugb.edu.sv" target="_blank">ugb.edu.sv</a>
+					<ul id="submenu"> <!--Se agrega dentro del la UL del Menu otra mas para que tengamos el submenu-->
+						<li><a href="https://www.ugb.edu.sv/facultades/tecnologia.html" target="_blank">Tecnologia</a></li>
+						<li><a href="https://www.ugb.edu.sv/facultades/juridicas.html" target="_blank">Juridica</a></li>
+						<li><a href="https://www.ugb.edu.sv/facultades/empresariales.html" target="_blank">Empresarial</a></li>
+					</ul>
+				</li>
+				<li><a href="http://facebook.com" target="_blank">Facebook.com</a>
+					<ul id="submenu">
+						<li><a href="">Submenu 1</a></li>
+						<li><a href="">Submenu 2</a></li>
+						<li><a href="">Submenu 3</a></li>
+					</ul>
+				</li>
+
+				<li><a href="http://google.com" target="_blank">Google.com</a>
+					<ul id="submenu">
+						<li><a href="">Submenu 1</a></li>
+						<li><a href="">Submenu 2</a></li>
+						<li><a href="">Submenu 3</a></li>
+					</ul>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </body>
 </html>
