--- a/Computo2/Practica 7/Practica7.html
+++ b/Computo2/Practica 7/Practica7.html
@@ -15,8 +15,8 @@
 			<h1 id="encabezado">Mi encabezado</h1>
 
 	<header>
-			<h1>Mi sitio web</h1>
-			<p>Mi sitio web creado en html5</p>
+			<h1>Mi Sitio web</h1>
+			<p>Mi Sitio web creado en html5</p>
 	</header>
 
 	<section>
@@ -33,5 +33,28 @@
 
 	<footer>Creado por Pablo Gómez</footer>
 
+	<p>Position</p>
+	<p><br>La position propiedad especifica el tipo de método de posicionamiento utilizado para un elemento (estático, relativo, absoluto, fijo o adhesivo).
+	<br>
+	position = static|absolute|fixed|relative|sticky|initial|inherit;</p>
+
+	<br></br>
+
+	<p>Width:auto</p>
+	<p>La width propiedad establece el ancho de un elemento.<br>
+	¡El ancho de un elemento no incluye relleno, bordes o márgenes!<br>
+	Nota: Las propiedades min-width y max-width anulan la width propiedad.<br>
+	Valor por defecto:	auto<br>
+	width: auto|value|initial|inherit;
+	</p>
+
+	<br></br>
+
+	<p>Height: 100px: Establezca la altura de un elemento al 100% de la altura del elemento principal:</p>
+	<p>Definición y uso: La height propiedad establece la altura de un elemento. La altura de un elemento no incluye relleno, bordes o márgenes. <br>
+	Si height: auto;el elemento ajustará automáticamente su altura para permitir que su contenido se muestre correctamente.<br>
+	Si heightse establece en un valor numérico (como píxeles, (r) em, porcentajes), entonces si el contenido no cabe dentro de la altura especificada, se desbordará. La propiedad de desbordamiento define cómo manejará el contenedor el contenido desbordado . <br>
+	Nota: Las propiedades min-height y max-height anulan la heightpropiedad.<br>
+	Valor por defecto:	auto</p>
 	</body>
 </html>
