--- a/Computo2/Practica 7/Practica7.html
+++ b/Computo2/Practica 7/Practica7.html
@@ -33,14 +33,14 @@
 
 	<footer>Creado por Pablo Gómez</footer>
 
-	<p>Position</p>
+	<li>Position</li>
 	<p><br>La position propiedad especifica el tipo de método de posicionamiento utilizado para un elemento (estático, relativo, absoluto, fijo o adhesivo).
 	<br>
 	position = static|absolute|fixed|relative|sticky|initial|inherit;</p>
 
 	<br></br>
 
-	<p>Width:auto</p>
+	<li>Width:auto</li>
 	<p>La width propiedad establece el ancho de un elemento.<br>
 	¡El ancho de un elemento no incluye relleno, bordes o márgenes!<br>
 	Nota: Las propiedades min-width y max-width anulan la width propiedad.<br>
@@ -50,11 +50,36 @@
 
 	<br></br>
 
-	<p>Height: 100px: Establezca la altura de un elemento al 100% de la altura del elemento principal:</p>
+	<li>Height: 100px: Establezca la altura de un elemento al 100% de la altura del elemento principal</li>
 	<p>Definición y uso: La height propiedad establece la altura de un elemento. La altura de un elemento no incluye relleno, bordes o márgenes. <br>
 	Si height: auto;el elemento ajustará automáticamente su altura para permitir que su contenido se muestre correctamente.<br>
 	Si heightse establece en un valor numérico (como píxeles, (r) em, porcentajes), entonces si el contenido no cabe dentro de la altura especificada, se desbordará. La propiedad de desbordamiento define cómo manejará el contenedor el contenido desbordado . <br>
 	Nota: Las propiedades min-height y max-height anulan la heightpropiedad.<br>
 	Valor por defecto:	auto</p>
+
+	<br></br>
+
+	<li>Margin</li>
+	<p>Las marginpropiedades CSS se usan para crear espacio alrededor de elementos, fuera de cualquier borde definido.<br>
+	Con CSS, tienes control total sobre los márgenes. Existen propiedades para establecer el margen para cada lado de un elemento (arriba, derecha, abajo e izquierda).</p>
+	<p>CSS tiene propiedades para especificar el margen para cada lado de un elemento:
+	<li>margin-top</li>
+	<li>margin-right</li>
+	<li>margin-bottom</li>
+	<li>margin-left</li>
+	</p>
+
+	<br></br>
+
+	<li>Padding</li>
+	<p>Las padding propiedades de CSS se usan para generar espacio alrededor del contenido de un elemento, dentro de cualquier borde definido.<br>
+	Con CSS, tienes control total sobre el relleno. Existen propiedades para configurar el relleno para cada lado de un elemento (arriba, derecha, abajo e izquierda).</p>
+	<p>CSS tiene propiedades para especificar el relleno para cada lado de un elemento:
+	<li>padding-top</li>
+	<li>padding-right</li>
+	<li>padding-bottom</li>
+	<li>padding-left</li>
+	</p>
+
 	</body>
 </html>
