--- a/Computo2/Practica 8/Practica8.html
+++ b/Computo2/Practica 8/Practica8.html
@@ -21,11 +21,28 @@
 			</div>
 
 			<div class="row">
-				<div class="rol">Columna 1</div>
-				<div class="rol">Columna 2</div>
-				<div class="rol">Columna 3</div>
+				<div class="col">Columna</div>
+				<div class="col">Columna</div>
+				<div class="col">Columna</div>
 			</div>
 
+			<div class="row">
+				<div class="col-12">Columna</div>
+				<div class="col-8">Columna</div>
+				<div class="col-5">Columna</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-1">Columna</div>
+			</div>
+
+			<div class="row">
+				<div class="col-12 col-sm-6 col-md">Columna</div>
+				<div class="col-12 col-sm-6 col-md">Columna</div>
+				<div class="col-12 col-sm-6 col-md col-xl-12">Columna</div>
+			</div>	
+
+			<p>Mi deduccion es: que la ultima clase de Bootstrap "Col" que tengamos sera la que mostrara como apariencia en nuestro sitios, siempre teniendo las otras propiedades, segun lo que observe.</p>
 			<h1>Tablas basica</h1>
 			<table style="width:100%" class="table table-striped table-dark">
 	  <tr>
