--- a/Computo2/Practica 8/Practica8.html
+++ b/Computo2/Practica 8/Practica8.html
@@ -27,6 +27,12 @@
 			</div>
 
 			<div class="row">
+				<div class="col">Columna</div>
+				<div class="col">Columna</div>
+				<div class="col">Columna</div>
+			</div>
+
+			<div class="row">
 				<div class="col-12">Columna</div>
 				<div class="col-8">Columna</div>
 				<div class="col-5">Columna</div>
