--- a/Computo2/LaboratorioPractico/LaboratorioPractico.html
+++ b/Computo2/LaboratorioPractico/LaboratorioPractico.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>AccessOnline</title>
+		<link rel="icon" href="img/Logo.png">
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 		<link rel="stylesheet" href="css/LaboratorioPractico.css">
@@ -15,27 +17,15 @@
 	<body>
 		  <div class="container"><br>
 		  	<div class="jumbotron">
+		  		<img height="22%" width="22%" align="right" src="img/Logo.png">
 		  <h1>AccessOnline</h1>
-		  <p class="informacion">Venta de Accesorios en linea para telefonos celulares iPhones y Android.</p>
-		  </div>
-
-		  <div class="container">
-		  	<div class="">
-		  	<h5 align="center">Seleccione su Dispositivo</h5>
-		  		<ul class="nav justify-content-center">
-		    	<li class="nav-item dropdown"> 
-		      		<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Dispositivos</a>
-		      	<div class="dropdown-menu">
-		        	<a class="dropdown-item" href="#">iPhone</a>
-		        	<a class="dropdown-item" href="#">Android</a>
-		        </div>
-		    	</li>
-		  		</ul>
-		  </div>
-		  </div>
 		  <br>
+		  <p class="informacion">Este es un Sitios Web donde se le brindara la Venta de Accesorios en linea para telefonos celulares<br> iPhones y Android de una Forma facil y rapida, con los mejores diseños para los distintos dispositivos <br> moviles del mercado</p>
+		  <br><br>
+		
+		  </div>
 		  
-		<div class="container">
+		<div class="container" >
 		  <h2>Accesorios Disponibles</h2>
 		  <br>
 		  <ul class="nav nav-tabs" role="tablist">
@@ -60,7 +50,7 @@
 		      <p>Todo tipo de Protectores Fisicos, Pantalla y cargadores de diferentes diseños y colores para tu dispositivo iPhone o Android</p>
 
 		      <div class="container">  
-				<div class="row">
+				<div class="row tipodeacce">
 				<div class="col">Protector Fisico</div>
 				<div class="col">Protector de Pantalla</div>
 				<div class="col">Cargadores</div>
@@ -68,57 +58,57 @@
 
 
 				<div class="row">
-					<div class="col">
+					<div class="col-4">
 						<tr align="center">
 		       			 <td><p>iPhone 8 Plus</p>
-		        			<img height="70%" width="70%" src="img/Todos/ProtectorFisicoiPhone8Plus.jpg"><p>$15.50</p>
+		        			<img height="75%" width="80%" src="img/Todos/ProtectorFisicoiPhone8Plus.jpg"><p>$15.50</p>
 		       			 </td>
 					</div>
-					<div class="col">
+					<div class="col-4">
 						<td><p>Galaxy Grand Prime</p>
-		        			<img height="70%" width="73%" src="img/Todos/ProtectordePantallaGrandPrime.jpg"><P>$5.00</P>
+		        			<img height="75%" width="80%" src="img/Todos/ProtectordePantallaGrandPrime.jpg"><P>$5.00</P>
 		        		</td>
 					</div>
-					<div class="col">
+					<div class="col-4">
 						<td><p>iPhone</p>
-		        			<img height="70%" width="70%" src="img/Todos/CargadoriPhone.jpg"><p>$12.75</p>
+		        			<img height="75%" width="80%" src="img/Todos/CargadoriPhone.jpg"><p>$12.75</p>
 		        		</td>
 					</div>
 				</div>	
 			</div>
 
 			<div class="row">
-				<div class="col">
+				<div class="col-4">
 					 <td><p>Galaxy S8</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoS8.jpg"><p>$10.50</p>
+		        		<img height="65%" width="75%" src="img/Todos/ProtectorFisicoS8.jpg"><p>$10.50</p>
 		       		 </td>
 				</div>
-				<div class="col">
+				<div class="col-4">
 					<td><p>LG G3</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaLG.jpg"><P>$5.50</P>
+		        		<img height="65%" width="78%" src="img/Todos/ProtectordePantallaLG.jpg"><P>$5.50</P>
 		        	</td>
 				</div>
-				<div class="col">
+				<div class="col-4">
 					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CargadorNegroAndroid.jpg"><p>$12.00</p>
+		        		<img height="65%" width="75%" src="img/Todos/CargadorNegroAndroid.jpg"><p>$12.00</p>
 		        	</td>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col">
+				<div class="col-4">
 					 <td><p>iPhone 6</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoiPhone6.jpg"><p>$9.99</p>
+		        		<img height="73%" width="80%" src="img/Todos/ProtectorFisicoiPhone6.jpg"><p>$9.99</p>
 		       		 </td>
 				</div>
-				<div class="col">
+				<div class="col-4">
 					<td><p>Galaxy J Serie</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaNegro.jpg"><P>$5.50 (Black)</P>
+		        		<img height="73%" width="80%" src="img/Todos/ProtectordePantallaNegro.jpg"><P>$5.50 (Black)</P>
 		        	</td>
 				</div>
-				<div class="col">
+				<div class="col-4">
 					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CableAndroidColores.png"><p>$12.00</p>
+		        		<img height="72%" width="75%" src="img/Todos/CableAndroidColores.png"><p>$12.00</p>
 		        	</td>
 				</div>
 			</div>     
@@ -128,65 +118,65 @@
 		      <p>Protectores fisicos para los dispositivos iPhone y Android</p>
 
 		       <div class="container">  
-				<div class="row">
-				<div class="col">Protector Fisico</div>
-				<div class="col">Protector de Pantalla</div>
-				<div class="col">Cargadores</div>
+				<div class="row tipodeacce">
+				<div class="col">iPhone</div>
+				<div class="col">Android</div>
+				<div class="col">Todos</div>
 			</div>
 
 
 				<div class="row">
 					<div class="col">
 						<tr align="center">
-		       			 <td><p>iPhone 8 Plus</p>
-		        			<img height="70%" width="70%" src="img/Todos/ProtectorFisicoiPhone8Plus.jpg"><p>$15.50</p>
+		       			 <td><p>iPhone X</p>
+		        			<img height="76%" width="80%" src="img/iPhone/ProtectorFisicoNegroiPhoneX.jpg"><p>$15.50</p>
 		       			 </td>
 					</div>
 					<div class="col">
-						<td><p>Galaxy Grand Prime</p>
-		        			<img height="70%" width="73%" src="img/Todos/ProtectordePantallaGrandPrime.jpg"><P>$5.00</P>
-		        		</td>
+						<td><p>Galaxy S5<p>
+		        			<img height="55%" width="80%" src="img/Android/ProtectorFisicoCamuflajeS5.jpg"><P>$7.00</P>
+		       			 </td>
 					</div>
 					<div class="col">
-						<td><p>iPhone</p>
-		        			<img height="70%" width="70%" src="img/Todos/CargadoriPhone.jpg"><p>$12.75</p>
-		        		</td>
+						<td><p>Samsung Galaxy Grand Prime</p>
+		        			<img height="77%" width="80%" src="img/Android/ProtectorFisicoElefanteGrandPrime.jpg"><p>$6.00</p>
+		      			 </td>
 					</div>
 				</div>	
 			</div>
 
 			<div class="row">
 				<div class="col">
-					 <td><p>Galaxy S8</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoS8.jpg"><p>$10.50</p>
-		       		 </td>
-				</div>
-				<div class="col">
-					<td><p>LG G3</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaLG.jpg"><P>$5.50</P>
+					 <td><p>iPhone 4</p>
+		        		<img height="80%" width="80%" src="img/iPhone/ProtectorFisicoRallasiPhone4.jpg"><p>$5.50</p>
 		        	</td>
 				</div>
 				<div class="col">
-					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CargadorNegroAndroid.jpg"><p>$12.00</p>
+					<td><p>Huawei P8 Lite</p>
+		        		<img height="80%" width="80%" src="img/Android/ProtectorFisicoRosaHuaweiP8.jpg"><P>$7.00</P>
+		        	</td>
+				</div>
+				<div class="col">
+					<td><p>iPhone X</p>
+		        		<img height="80%" width="80%" src="img/iPhone/ProtectorFisicoRojoiPhoneX.jpg"><p>$17.00</p>
 		        	</td>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col">
-					 <td><p>iPhone 6</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoiPhone6.jpg"><p>$9.99</p>
-		       		 </td>
-				</div>
-				<div class="col">
-					<td><p>Galaxy J Serie</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaNegro.jpg"><P>$5.50 (Black)</P>
+					<td><p>iPhone 7</p>
+		        		<img height="80%" width="80%" src="img/iPhone/ProtectorFisicoNegroiPhone7.jpg"><p>$9.99</p>
 		        	</td>
 				</div>
 				<div class="col">
-					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CableAndroidColores.png"><p>$12.00</p>
+					<td><p>Nexus</p>
+		        		<img height="80%" width="80%" src="img/Android/ProtectorFisicoNegroNexus.jpg"><P>$6.50</P>
+		        	</td>
+				</div>
+				<div class="col">
+					<td><p>Galaxy S5</p>
+		        		<img height="80%" width="80%" src="img/Android/ProtectorFisicoBlueS5.jpg"><p>$9.00</p>
 		        	</td>
 				</div>
 			</div>     
@@ -197,28 +187,28 @@
 		      <p>Vidrios temprados para iPhone y Android, resistentes a golpes y caidas.</p>
 
 		       <div class="container">  
-				<div class="row">
-				<div class="col">Protector Fisico</div>
-				<div class="col">Protector de Pantalla</div>
-				<div class="col">Cargadores</div>
+				<div class="row tipodeacce">
+				<div class="col">iPhone</div>
+				<div class="col">Android</div>
+				<div class="col">Todos</div>
 			</div>
 
 
 				<div class="row">
 					<div class="col">
 						<tr align="center">
-		       			 <td><p>iPhone 8 Plus</p>
-		        			<img height="70%" width="70%" src="img/Todos/ProtectorFisicoiPhone8Plus.jpg"><p>$15.50</p>
-		       			 </td>
-					</div>
-					<div class="col">
-						<td><p>Galaxy Grand Prime</p>
-		        			<img height="70%" width="73%" src="img/Todos/ProtectordePantallaGrandPrime.jpg"><P>$5.00</P>
+		       			<td><p>iPhone X</p>
+		        			<img height="60%" width="60%" src="img/iPhone/ProtectordePantallaiPhoneX.jpg"><p>$6.50</p>
 		        		</td>
 					</div>
 					<div class="col">
-						<td><p>iPhone</p>
-		        			<img height="70%" width="70%" src="img/Todos/CargadoriPhone.jpg"><p>$12.75</p>
+						<td><p>Galaxy J1<p>
+		        			<img height="55%" width="55%" src="img/Android/ProtectordePantallaGalaxyJ1.jpg"><P>$5.00</P>
+		       			 </td>
+					</div>
+					<div class="col">
+						<td><p>iPhone 6</p>
+		        			<img height="60%" width="60%" src="img/iPhone/ProtectordePantallaWhiteiPhone6.jpg"><p>$5.50</p>
 		        		</td>
 					</div>
 				</div>	
@@ -226,36 +216,37 @@
 
 			<div class="row">
 				<div class="col">
-					 <td><p>Galaxy S8</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoS8.jpg"><p>$10.50</p>
-		       		 </td>
+					 <td><p>iPhone 6</p>
+		        		<img height="60%" width="60%" src="img/iPhone/ProtectordePantallaWhiteiPhone6.jpg"><p>$5.50</p>
+		     		 </td>
+		        
 				</div>
 				<div class="col">
-					<td><p>LG G3</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaLG.jpg"><P>$5.50</P>
+					<td><p>Samsung Galaxy Grand Prime</p>
+		        		<img height="60%" width="60%" src="img/Android/ProtectordePantallaGalaxyGrandPrime.jpg"><P>$5.50</P>
 		        	</td>
 				</div>
 				<div class="col">
-					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CargadorNegroAndroid.jpg"><p>$12.00</p>
+					<td><p>Galaxy S7</p>
+		        		<img height="60%" width="60%" src="img/Android/ProtectordePantallaGalaxyS7.jpg"><p>$5.00</p>
 		        	</td>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col">
-					 <td><p>iPhone 6</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoiPhone6.jpg"><p>$9.99</p>
-		       		 </td>
-				</div>
-				<div class="col">
-					<td><p>Galaxy J Serie</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaNegro.jpg"><P>$5.50 (Black)</P>
+					 <td><p>iPhone 7</p>
+		        	<img height="60%" width="60%" src="img/iPhone/ProtectordePantallaiPhone7.jpg"><p>$5.50</p>
 		        	</td>
 				</div>
 				<div class="col">
-					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CableAndroidColores.png"><p>$12.00</p>
+					<td><p>Alcatel A30</p>
+		        		<img height="260" width="60%" src="img/Android/ProtectordePantallaGalaxyAlcatelA30.jpg"><P>$5.50</P>
+		        	</td>
+				</div>
+				<div class="col">
+					<td><p>Alcatel POP C3</p>
+		        		<img height="60%" width="50%" src="img/Android/ProtectordePantallaPopC3.jpg"><p>$5.00</p>
 		        	</td>
 				</div>
 			</div>     
@@ -266,28 +257,28 @@
 		      <p>Todo tipo de cables para iPhone y Android con diferentes colores y materiales</p>
 
 		      <div class="container">  
-				<div class="row">
-				<div class="col">Protector Fisico</div>
-				<div class="col">Protector de Pantalla</div>
-				<div class="col">Cargadores</div>
+				<div class="row tipodeacce">
+				<div class="col">iPhone</div>
+				<div class="col">Android</div>
+				<div class="col">Todos</div>
 			</div>
 
 
 				<div class="row">
 					<div class="col">
 						<tr align="center">
-		       			 <td><p>iPhone 8 Plus</p>
-		        			<img height="70%" width="70%" src="img/Todos/ProtectorFisicoiPhone8Plus.jpg"><p>$15.50</p>
-		       			 </td>
-					</div>
-					<div class="col">
-						<td><p>Galaxy Grand Prime</p>
-		        			<img height="70%" width="73%" src="img/Todos/ProtectordePantallaGrandPrime.jpg"><P>$5.00</P>
+		       			 <td><p>iPhone</p>
+		        			<img height="70%" width="70%" src="img/iPhone/CableiPhoneRed.jpg"><p>$12.50</p>
 		        		</td>
 					</div>
 					<div class="col">
-						<td><p>iPhone</p>
-		        			<img height="70%" width="70%" src="img/Todos/CargadoriPhone.jpg"><p>$12.75</p>
+						<td><p>Android<p>
+		        			<img height="70%" width="70%" src="img/Android/CableAndroidBlack.jpeg"><P>$8.00</P>
+		        		</td>
+					</div>
+					<div class="col">
+						<td><p>iPhone y Android</p>
+		        			<img height="70%" width="70%" src="img/Android/CableAndroidMulti.jpg"><p>$15.75</p>
 		        		</td>
 					</div>
 				</div>	
@@ -295,40 +286,48 @@
 
 			<div class="row">
 				<div class="col">
-					 <td><p>Galaxy S8</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoS8.jpg"><p>$10.50</p>
+					 <td><p>iPhone</p>
+		        		<img height="70%" width="70%" src="img/iPhone/CableiPhoneGros.jpg"><p>$10.50</p>
 		       		 </td>
 				</div>
 				<div class="col">
-					<td><p>LG G3</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaLG.jpg"><P>$5.50</P>
+					<td><p>Android</p>
+		        		<img height="70%" width="70%" src="img/Android/CableAndroidBlue.jpg"><P>$10.50</P>
 		        	</td>
 				</div>
 				<div class="col">
-					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CargadorNegroAndroid.jpg"><p>$12.00</p>
+					<td><p>iPhone</p>
+		        		<img height="70%" width="70%" src="img/iPhone/CableiPhoneAmazon.jpg"><p>$12.00</p>
 		        	</td>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col">
-					 <td><p>iPhone 6</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectorFisicoiPhone6.jpg"><p>$9.99</p>
-		       		 </td>
-				</div>
-				<div class="col">
-					<td><p>Galaxy J Serie</p>
-		        		<img height="60%" width="60%" src="img/Todos/ProtectordePantallaNegro.jpg"><P>$5.50 (Black)</P>
+					 <td><p>iPhone</p>
+		        		<img height="70%" width="70%" src="img/iPhone/CableiPhone.jpg"><p>$11.99</p>
 		        	</td>
 				</div>
 				<div class="col">
 					<td><p>Android</p>
-		        		<img height="60%" width="60%" src="img/Todos/CableAndroidColores.png"><p>$12.00</p>
-		        	</td>
+		        	<img height="70%" width="70%" src="img/Android/CableAndroidRosa.jpg"><P>$12.50</P>
+		        </td>
+				</div>
+				<div class="col">
+					<td><p>Android</p>
+		        		<img height="70%" width="70%" src="img/iPhone/CableiPhoneBlack.jpg"><p>$10.00</p>
+		       		 </td>
 				</div>
 			</div>     
 		 	  </div>
 
+		 	<div align="left">
+		 	<a href="https://www.facebook.com/pablojgomezg" class="fa fa-facebook" target="_blank"><img height="5%" width="5%" src="img/Facebook.png" ></a>
+			<a href="https://twitter.com/Pablojgomezg" class="fa fa-twitter" target="_blank"><img height="5%" width="5%" src="img/Twitter.png"></a>
+			<p>Contacto: Pablojgomezg@gmail.com</p>
+			</div>  
+			<br>
+			<br>
+			
 	</body>
 </html>
